[package]
name = "openaws-vpn-client"
version = "0.1.8"
edition = "2021"
authors = ["KoresFramework", "Jonathan H. R. Lopes <jhrldev@gmail.com>"]
license = "MIT"

#

description = "Unofficial open-source AWS VPN client written in Rust"
homepage = "https://github.com/JonathanxD/openaws-vpn-client"
repository = "https://github.com/JonathanxD/openaws-vpn-client"
readme = "README.md"
keywords = ["vpn", "openaws", "vpn-client"]
categories = ["gui"]
documentation = "https://docs.rs/openaws-vpn-client/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tempfile = "3.13.0"
cargo-util = "0.2.14"
form_urlencoded = "1.2.1"

[profile.release]
strip = "symbols"
